Fixing filter wrap alignment

--- a/static/css/techresidents.css
+++ b/static/css/techresidents.css
@@ -418,6 +418,7 @@ button.drop-button .caret {
     max-width: 150px;
     overflow: hidden;
     text-overflow: ellipsis;
+    vertical-align: middle;
     white-space: nowrap;
 }
 
